[workspace]
resolver = "3"
members = [
    "./packages/lyric",
    "./packages/fft",
    "./packages/ws-protocol",
    "./packages/ttml-processor",
]
exclude = [
    "./packages/player-core",
    "./packages/player/src-tauri",
    "./packages/skia-player",
]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
